--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JATE",
+  "name": "jate",
   "version": "1.0.0",
   "description": "Just another text editor",
   "main": "server.js",
@@ -9,18 +9,17 @@
     "server": "cd server && nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
-    "client": "cd client && npm start",
-    "render-build": "npm install && npm run build"
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "Ryan Gurley",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.17.1",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.0"
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
